<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="350dp"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskCreateItemText"
        style="@style/TextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/stringTask"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/white"
        app:cursorColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskCreateItemRecycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/taskCreateItemAddVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskCreateItemText" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/textVariantCreateTextInput"
        app:layout_constraintEnd_toStartOf="@id/textVariantCreateTextInput"
        app:layout_constraintTop_toTopOf="@id/textVariantCreateTextInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textVariantCreateTextInput"
        style="@style/TextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/stringTextAnswer"
        android:textColorHint="@color/white"
        android:visibility="gone"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/white"
        app:cursorColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskCreateItemRecycler">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextVariantInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/taskCreateItemAddVariant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stringAdd"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskCreateItemRecycler" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addTextAnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:text="@string/stringAddTextAnswer"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/taskCreateItemAddVariant"
        app:layout_constraintTop_toBottomOf="@id/taskCreateItemRecycler" />

</androidx.constraintlayout.widget.ConstraintLayout>
